--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-modal-selector": "^2.1.2",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-svg": "^15.5.0",
     "react-native-vector-icons": "^10.1.0"
