--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/prebuild-config": "~7.0.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
-    "expo": "~51.0.26",
+    "expo": "~51.0.28",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^12.0.9",
     "expo-splash-screen": "^0.27.5",
@@ -34,10 +36,10 @@
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-selector": "^2.1.2",
     "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-svg": "^15.5.0",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
